Fix visible bugs on superuser

--- a/th-fe/src/component/admin/searchFilter.css
+++ b/th-fe/src/component/admin/searchFilter.css
@@ -1,6 +1,5 @@
 .search-filter {
   max-width: 500px;
-  border: 1px solid red;
   background-color: #ffffff;
   padding:10px 30px;
   text-align:left
